navbar en bootstrap

--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -11,6 +11,8 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script defer src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+
 </head>
 <body>
   <app-root></app-root>
